--- a/pages/page2.html
+++ b/pages/page2.html
@@ -15,9 +15,9 @@
 
     <div class="row">
         <div class="col">
-            <div class="card" style="width: 18rem;">
+            <div class="card cardstyle" style="width: 18rem;">
                 <img src="/assets/moviesimage1_Limitless.jpg" class="card-img-top cardimgstyle" alt="...">
-                <div class="card-body cardbodystyle">
+                <div class="card-body text-center cardbodystyle">
                     <h5 class="card-title cardtitlestyle">1. Limitless</h5>
                     <p class="card-text cardtextstyle">A mysterious pill that enables the user to access 100% of his brain's abilities
                         transforms a struggling writer into a financial wizard, but it also puts him in a new world with many dangers.</p>
@@ -27,9 +27,9 @@
             </div>
         </div>
         <div class="col">
-            <div class="card" style="width: 18rem;">
-                <img src="/assets/moviesimage2_InsideMan.jpg" class="card-img-top" alt="...">
-                <div class="card-body cardbodystyle">
+            <div class="card cardstyle" style="width: 18rem;">
+                <img src="/assets/moviesimage2_InsideMan.jpg" class="card-img-top cardimgstyle" alt="...">
+                <div class="card-body text-center cardbodystyle">
                     <h5 class="card-title cardtitlestyle">2. Inside Man</h5>
                     <p class="card-text cardtextstyle">A police detective, a bank robber, and a high-power broker enter high-stakes negotiations after the criminal's brilliant heist spirals into a hostage situation.</p>
                     <a href="https://www.youtube.com/watch?v=FSH-dbbiroI" class="btn btn-primary cardbtnstyle">Watch Trailer</a>
@@ -38,9 +38,9 @@
         </div>
         <div class="col">
 
-            <div class="card" style="width: 18rem;">
-                <img src="/assets/moviesimage3_WrathOfMan.jpg" class="card-img-top" alt="...">
-                <div class="card-body cardbodystyle">
+            <div class="card cardstyle" style="width: 18rem;">
+                <img src="/assets/moviesimage3_WrathOfMan.jpg" class="card-img-top cardimgstyle" alt="...">
+                <div class="card-body text-center cardbodystyle">
                     <h5 class="card-title cardtitlestyle">3. Wrath Of Man</h5>
                     <p class="card-text cardtextstyle"> A cold and mysterious character working at a cash truck company responsible for moving a lot of money around Los Angeles each week. .</p>
                     <a href="https://www.youtube.com/watch?v=S-qCcQc4fWU" class="btn btn-primary cardbtnstyle">Watch Trailer</a>
@@ -49,9 +49,9 @@
         </div>
         <div class="col">
 
-            <div class="card" style="width: 18rem;">
-                <img src="/assets/moviesimage4_TheF&F.jpg" class="card-img-top" alt="...">
-                <div class="card-body cardbodystyle">
+            <div class="card cardstyle" style="width: 18rem;">
+                <img src="/assets/moviesimage4_TheF&F.jpg" class="card-img-top cardimgstyle" alt="...">
+                <div class="card-body text-center cardbodystyle">
                     <h5 class="card-title cardtitlestyle">4. The Fast & Furious</h5>
                     <p class="card-text cardtextstyle">Los Angeles police officer Brian O'Conner must decide where his loyalty really lies when he becomes enamored with the street racing world he has been sent undercover to destroy. </p>
                     <a href="https://www.youtube.com/watch?v=ZsJz2TJAPjw" class="btn btn-primary cardbtnstyle">Watch Trailer</a>
@@ -60,9 +60,9 @@
         </div>
         <div class="col">
 
-            <div class="card" style="width: 18rem;">
-                <img src="/assets/moviesimage5_F&FTokyoDrift.jpeg" class="card-img-top" alt="...">
-                <div class="card-body cardbodystyle">
+            <div class="card cardstyle" style="width: 18rem;">
+                <img src="/assets/moviesimage5_F&FTokyoDrift.jpeg" class="card-img-top cardimgstyle" alt="...">
+                <div class="card-body text-center cardbodystyle">
                     <h5 class="card-title cardtitlestyle">5. F&F Tokyo Drift</h5>
                     <p class="card-text cardtextstyle"> A teenager becomes a major competitor in the world of drift racing after moving in with his father in Tokyo to avoid a jail sentence in America. </p>
                     <a href="https://www.youtube.com/watch?v=p8HQ2JLlc4E" class="btn btn-primary cardbtnstyle">Watch Trailer</a>
@@ -73,9 +73,9 @@
 
     <div class="row">
         <div class="col">
-            <div class="card" style="width: 18rem;">
+            <div class="card cardstyle" style="width: 18rem;">
                 <img src="/assets/moviesimage6_TheGuardian.jpg" class="card-img-top cardimgstyle" alt="...">
-                <div class="card-body cardbodystyle">
+                <div class="card-body text-center cardbodystyle">
                     <h5 class="card-title cardtitlestyle">6. The Guardian</h5>
                     <p class="card-text cardtextstyle">A high school swim champion with a troubled past enrolls in the U.S. Coast Guard's "A" School, where legendary rescue swimmer Ben Randall teaches him some hard lessons about loss, love, and self-sacrifice.</p>
                     <a href=" https://www.youtube.com/watch?v=fvVrlOS8vC4" class="btn btn-primary cardbtnstyle">Watch
@@ -84,9 +84,9 @@
             </div>
         </div>
         <div class="col">
-            <div class="card" style="width: 18rem;">
+            <div class="card cardstyle" style="width: 18rem;">
                 <img src="/assets/moviesimage7_TheDayAfterTomorrow.jpg" class="card-img-top cardimgstyle" alt="...">
-                <div class="card-body cardbodystyle">
+                <div class="card-body text-center cardbodystyle">
                     <h5 class="card-title cardtitlestyle">7. The Day After Tomorrow</h5>
                     <p class="card-text cardtextstyle">Jack Hall, paleoclimatologist, must make a daring trek from Washington, D.C. to New York City to reach his son, trapped in the cross-hairs of a sudden international storm which plunges the planet into a new Ice Age. </p>
                     <a href=" https://www.youtube.com/watch?v=Ku_IseK3xTc" class="btn btn-primary cardbtnstyle">Watch
@@ -95,9 +95,9 @@
             </div>
         </div>
         <div class="col">
-            <div class="card" style="width: 18rem;">
+            <div class="card cardstyle" style="width: 18rem;">
                 <img src="/assets/moviesimage8_Shooter.jpg" class="card-img-top cardimgstyle" alt="...">
-                <div class="card-body cardbodystyle">
+                <div class="card-body text-center cardbodystyle">
                     <h5 class="card-title cardtitlestyle">8. Shooter</h5>
                     <p class="card-text cardtextstyle">A marksman living in exile is coaxed back into action after hearing of a plot to kill the President. After being-double crossed for the attempt and on the run, he sets out for the real killer and the truth. </p>
                     <a href="https://www.youtube.com/watch?v=A3lPVwYOdzA
@@ -107,9 +107,9 @@
             </div>
         </div>
         <div class="col">
-            <div class="card" style="width: 18rem;">
+            <div class="card cardstyle" style="width: 18rem;">
                 <img src="/assets/moviesimage9_TheTransporter.jpg" class="card-img-top cardimgstyle" alt="...">
-                <div class="card-body cardbodystyle">
+                <div class="card-body text-center cardbodystyle">
                     <h5 class="card-title cardtitlestyle">9. The Transporter</h5>
                     <p class="card-text cardtextstyle">Frank Martin, who "transports" packages for unknown clients, is asked to move a package that soon begins moving, and complications arise. </p>
                     <a href="https://www.youtube.com/watch?v=7FnbLyv2oio" class="btn btn-primary cardbtnstyle">Watch
@@ -118,9 +118,9 @@
             </div>
         </div>
         <div class="col">
-            <div class="card" style="width: 18rem;">
+            <div class="card cardstyle" style="width: 18rem;">
                 <img src="/assets/moviesimage10_Transformers.jpg" class="card-img-top cardimgstyle" alt="...">
-                <div class="card-body cardbodystyle">
+                <div class="card-body text-center cardbodystyle">
                     <h5 class="card-title cardtitlestyle">10. Transformers</h5>
                     <p class="card-text cardtextstyle">An ancient struggle between two Cybertronian races, the heroic Autobots and the evil Decepticons, comes to Earth, with a clue to the ultimate power held by a teenager. </p>
                     <a href="https://www.youtube.com/watch?v=BrnXrtm334k" class="btn btn-primary cardbtnstyle">Watch
