--- a/pages/page3.html
+++ b/pages/page3.html
@@ -1,23 +1,253 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Top 10 TV Shows by Ak</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link rel="stylesheet" href="../style/styles.css">
-</head>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="../style/styles.css" />
+  </head>
 
-<body>
-    <h1>Top 10 TV Shows by Ak</h1>
+  <body>
+    
+        <h2>Top 10 TV Shows by Ak</h2>
+      
+    <div class="row firstRow">
+      <div class="col">
+        <div class="card" style="width: 18rem; height: 18rem">
+          <img
+            src="../assets/breaking bad.jpeg"
+            class="card-img-top"
+            alt="breaking bad title img"
+          />
+          <div class="card-body cardbodystyle">
+            <h5 class="card-title cardtitlestyle">1. Breaking Bad</h5>
+            <p class="card-text cardtextstyle">
+              A chemistry teacher diagnosed with inoperable lung cancer turns to
+              manufacturing and selling methamphetamine with a former student in
+              order to secure his family's future.
+            </p>
+            <a
+              href="https://youtu.be/HhesaQXLuRY?si=UOqzvMCdJ6tgy0Zc"
+              class="btn btn-primary cardbtnstyle"
+              >Watch Trailer</a
+            >
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card" style="width: 18rem; height: 18rem">
+          <img
+            src="../assets/sopranos.jpeg"
+            class="card-img-top"
+            alt="sopranos title img"
+          />
+          <div class="card-body cardbodystyle">
+            <h5 class="card-title cardtitlestyle">2. The Sopranos</h5>
+            <p class="card-text cardtextstyle">
+              New Jersey mob boss Tony Soprano deals with personal and
+              professional issues in his home and business life that affect his
+              mental state, leading him to seek professional psychiatric
+              counseling
+            </p>
+            <a
+              href="https://youtu.be/KMx4iFcozK0?si=0EeVBBlP_2aBigxJ"
+              class="btn btn-primary cardbtnstyle"
+              >Watch Trailer</a
+            >
+          </div>
+        </div>
+      </div>
+      <div class="col cardHeight">
+        <div class="card" style="width: 18rem">
+          <img
+            src="../assets/Game_of_Thrones_title_card.jpg"
+            class="card-img-top"
+            alt="GOT title img"
+          />
+          <div class="card-body cardbodystyle">
+            <h5 class="card-title cardtitlestyle">3. Game of Thrones</h5>
+            <p class="card-text cardtextstyle">
+              Nine noble families fight for control over the lands of Westeros,
+              while an ancient enemy returns after being dormant for a
+              millennia.
+            </p>
 
+            <a
+              href="https://youtu.be/KPLWWIOCOOQ?si=AFDJ50RUrV1zkqsB"
+              class="btn btn-primary cardbtnstyle GOTBtn"
+              >Watch Trailer</a
+            >
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card" style="width: 18rem">
+          <img
+            src="../assets/rick&morty.jpeg"
+            class="card-img-top"
+            alt="R&M title img"
+          />
+          <div class="card-body cardbodystyle">
+            <h5 class="card-title cardtitlestyle">4. Rick & Morty</h5>
+            <p class="card-text cardtextstyle">
+              An animated series that follows the exploits of a super scientist
+              and his not-so-bright grandson.
+            </p>
+            <a
+              href="https://youtu.be/KPLWWIOCOOQ?si=AFDJ50RUrV1zkqsB"
+              class="btn btn-primary cardbtnstyle RMBtn"
+              >Watch Trailer</a
+            >
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card" style="width: 18rem">
+          <img
+            src="../assets/sherlock.jpeg"
+            class="card-img-top"
+            alt="sherlock title img"
+          />
+          <div class="card-body cardbodystyle">
+            <h5 class="card-title cardtitlestyle">5. Sherlock</h5>
+            <p class="card-text cardtextstyle">
+              The quirky spin on Conan Doyle's iconic sleuth pitches him as a
+              "high-functioning sociopath" in modern-day London. Assisting him
+              in his investigations: Afghanistan War vet John Watson.
+            </p>
+            <a
+              href="https://youtu.be/xK7S9mrFWL4?si=nCQFCf35w3EoyQko"
+              class="btn btn-primary cardbtnstyle"
+              >Watch Trailer</a
+            >
+          </div>
+        </div>
+      </div>
+    </div>
+<br>
+<br>
+<br>
+</div>
+<div class="row secondRow">
+  <div class="col">
+    <div class="card" style="width: 18rem; height: 18rem">
+      <img
+        src="../assets/office.jpeg"
+        class="card-img-top"
+        alt="the office title img"
+      />
+      <div class="card-body cardbodystyle">
+        <h5 class="card-title cardtitlestyle">6. The Office</h5>
+        <p class="card-text cardtextstyle">
+            A mockumentary on a group of typical office workers, where the workday consists of ego clashes, inappropriate behavior, and tedium.
+        </p>
+        <a
+          href="https://youtu.be/tNcDHWpselE?si=0I8JXTyiuNVwvAQZ"
+          class="btn btn-primary cardbtnstyle OBtn"
+          >Watch Trailer</a
+        >
+      </div>
+    </div>
+  </div>
+  <div class="col">
+    <div class="card" style="width: 18rem; height: 18rem">
+      <img
+        src="../assets/gravity.jpeg"
+        class="card-img-top"
+        alt="gravity falls title img"
+      />
+      <div class="card-body cardbodystyle">
+        <h5 class="card-title cardtitlestyle">7. Gravity Falls</h5>
+        <p class="card-text cardtextstyle">
+            Twin siblings Dipper and Mabel Pines spend the summer at their great-uncle's tourist trap in the enigmatic Gravity Falls, Oregon.
+        </p>
+        <a
+          href="https://youtu.be/yfUDIPUETUg?feature=shared"
+          class="btn btn-primary cardbtnstyle GVBtn"
+          >Watch Trailer</a
+        >
+      </div>
+    </div>
+  </div>
+  <div class="col cardHeight">
+    <div class="card" style="width: 18rem">
+      <img
+        src="../assets/friends.jpeg"
+        class="card-img-top"
+        alt="friends title img"
+      />
+      <div class="card-body cardbodystyle">
+        <h5 class="card-title cardtitlestyle">8. Friends</h5>
+        <p class="card-text cardtextstyle">
+            Follows the personal and professional lives of six twenty to thirty year-old friends living in the Manhattan borough of New York City.
+        </p>
 
+        <a
+          href="https://youtu.be/IEEbUzffzrk?si=baFbk6s3FuXkju3e"
+          class="btn btn-primary cardbtnstyle FBtn"
+          >Watch Trailer</a
+        >
+      </div>
+    </div>
+  </div>
+  <div class="col">
+    <div class="card" style="width: 18rem">
+      <img
+        src="../assets/narcos.jpeg"
+        class="card-img-top"
+        alt="narcos title img"
+      />
+      <div class="card-body cardbodystyle">
+        <h5 class="card-title cardtitlestyle">9. Narcos</h5>
+        <p class="card-text cardtextstyle">
+            A chronicled look at the criminal exploits of Colombian drug lord Pablo Escobar, as well as the many other drug kingpins who plagued the country through the years.
+        </p>
+        <a
+          href="https://youtu.be/xl8zdCY-abw?si=QZOr3FjhtlaGTHKw"
+          class="btn btn-primary cardbtnstyle NBtn"
+          >Watch Trailer</a
+        >
+      </div>
+    </div>
+  </div>
+  <div class="col">
+    <div class="card" style="width: 18rem">
+      <img
+        src="../assets/the last.jpeg"
+        class="card-img-top"
+        alt="last of us title img"
+      />
+      <div class="card-body cardbodystyle">
+        <h5 class="card-title cardtitlestyle">10. The Last of Us</h5>
+        <p class="card-text cardtextstyle">
+            After a global pandemic destroys civilization, a hardened survivor takes charge of a 14-year-old girl who may be humanity's last hope.
+        </p>
+        <a
+          href="https://youtu.be/uLtkt8BonwM?si=p39FHltrJMPMPFdp"
+          class="btn btn-primary cardbtnstyle LBtn"
+          >Watch Trailer</a
+        >
+      </div>
+    </div>
+  </div>
+</div>
+<br>
+<br>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-        crossorigin="anonymous"></script>
-</body>
+<a href="../index.html" class="btn btn-primary mainmenu">Main Menu</a>
+<br>
+<br>
 
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
