--- a/index.html
+++ b/index.html
@@ -12,6 +12,17 @@
 
 <body>
     <h1>Top 10 Movies & TV Shows</h1>
+    <br>
+    <br>
+    <br>
+    <div class="Titlebtn">
+    <a href="/pages/page2.html" class="btn btn-primary Wbtn ">Top 10 Movies by Waqas</a>
+    <br>
+    <br>
+    <br>
+
+    <a href="/pages/page3.html" class="btn btn-primary Akbtn ">Top 10 Shows by AK</a>
+    </div>
 
 
 
