--- a/pages/page2.html
+++ b/pages/page2.html
@@ -1,143 +1,262 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Top 10 Movies by Waqas</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link rel="stylesheet" href="../style/styles.css">
-</head>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="../style/styles.css" />
+  </head>
 
-<body>
-    <h1>Top 10 Movies by Waqas</h1>
+  <body>
+    <h2>Top 10 Movies by Waqas</h2>
 
-    <div class="row">
-        <div class="col">
-            <div class="card cardstyle" style="width: 18rem;">
-                <img src="/assets/moviesimage1_Limitless.jpg" class="card-img-top cardimgstyle" alt="...">
-                <div class="card-body text-center cardbodystyle">
-                    <h5 class="card-title cardtitlestyle">1. Limitless</h5>
-                    <p class="card-text cardtextstyle">A mysterious pill that enables the user to access 100% of his brain's abilities
-                        transforms a struggling writer into a financial wizard, but it also puts him in a new world with many dangers.</p>
-                    <a href="https://www.youtube.com/watch?v=PfiFZG_RdI0" class="btn btn-primary cardbtnstyle">Watch
-                        Trailer</a>
-                </div>
-            </div>
+    <div class="row firstRow">
+      <div class="col">
+        <div class="card cardstyle" style="width: 18rem">
+          <img
+            src="/assets/moviesimage1_Limitless.jpg"
+            class="card-img-top cardimgstyle"
+            alt="..."
+          />
+          <div class="card-body text-center cardbodystyle">
+            <h5 class="card-title cardtitlestyle">1. Limitless</h5>
+            <p class="card-text cardtextstyle">
+              A mysterious pill that enables the user to access 100% of his
+              brain's abilities transforms a struggling writer into a financial
+              wizard, but it also puts him in a new world with many dangers.
+            </p>
+            <a
+              href="https://www.youtube.com/watch?v=PfiFZG_RdI0"
+              class="btn btn-primary cardbtnstyle"
+              >Watch Trailer</a
+            >
+          </div>
         </div>
-        <div class="col">
-            <div class="card cardstyle" style="width: 18rem;">
-                <img src="/assets/moviesimage2_InsideMan.jpg" class="card-img-top cardimgstyle" alt="...">
-                <div class="card-body text-center cardbodystyle">
-                    <h5 class="card-title cardtitlestyle">2. Inside Man</h5>
-                    <p class="card-text cardtextstyle">A police detective, a bank robber, and a high-power broker enter high-stakes negotiations after the criminal's brilliant heist spirals into a hostage situation.</p>
-                    <a href="https://www.youtube.com/watch?v=FSH-dbbiroI" class="btn btn-primary cardbtnstyle">Watch Trailer</a>
-                </div>
-            </div>
+      </div>
+      <div class="col">
+        <div class="card cardstyle" style="width: 18rem">
+          <img
+            src="../assets/moviesimage2_InsideMan.jpg"
+            class="card-img-top cardimgstyle"
+            alt="..."
+          />
+          <div class="card-body text-center cardbodystyle">
+            <h5 class="card-title cardtitlestyle">2. Inside Man</h5>
+            <p class="card-text cardtextstyle">
+              A police detective, a bank robber, and a high-power broker enter
+              high-stakes negotiations after the criminal's brilliant heist
+              spirals into a hostage situation.
+            </p>
+            <a
+              href="https://www.youtube.com/watch?v=FSH-dbbiroI"
+              class="btn btn-primary cardbtnstyle IBtn"
+              >Watch Trailer</a
+            >
+          </div>
         </div>
-        <div class="col">
-
-            <div class="card cardstyle" style="width: 18rem;">
-                <img src="/assets/moviesimage3_WrathOfMan.jpg" class="card-img-top cardimgstyle" alt="...">
-                <div class="card-body text-center cardbodystyle">
-                    <h5 class="card-title cardtitlestyle">3. Wrath Of Man</h5>
-                    <p class="card-text cardtextstyle"> A cold and mysterious character working at a cash truck company responsible for moving a lot of money around Los Angeles each week. .</p>
-                    <a href="https://www.youtube.com/watch?v=S-qCcQc4fWU" class="btn btn-primary cardbtnstyle">Watch Trailer</a>
-                </div>
-            </div>
+      </div>
+      <div class="col">
+        <div class="card cardstyle" style="width: 18rem">
+          <img
+            src="/assets/moviesimage3_WrathOfMan.jpg"
+            class="card-img-top cardimgstyle"
+            alt="..."
+          />
+          <div class="card-body text-center cardbodystyle">
+            <h5 class="card-title cardtitlestyle">3. Wrath Of Man</h5>
+            <p class="card-text cardtextstyle">
+              A cold and mysterious character working at a cash truck company
+              responsible for moving a lot of money around Los Angeles each
+              week. .
+            </p>
+            <a
+              href="https://www.youtube.com/watch?v=S-qCcQc4fWU"
+              class="btn btn-primary cardbtnstyle WMBtn"
+              >Watch Trailer</a
+            >
+          </div>
         </div>
-        <div class="col">
-
-            <div class="card cardstyle" style="width: 18rem;">
-                <img src="/assets/moviesimage4_TheF&F.jpg" class="card-img-top cardimgstyle" alt="...">
-                <div class="card-body text-center cardbodystyle">
-                    <h5 class="card-title cardtitlestyle">4. The Fast & Furious</h5>
-                    <p class="card-text cardtextstyle">Los Angeles police officer Brian O'Conner must decide where his loyalty really lies when he becomes enamored with the street racing world he has been sent undercover to destroy. </p>
-                    <a href="https://www.youtube.com/watch?v=ZsJz2TJAPjw" class="btn btn-primary cardbtnstyle">Watch Trailer</a>
-                </div>
-            </div>
+      </div>
+      <div class="col">
+        <div class="card cardstyle" style="width: 18rem">
+          <img
+            src="/assets/moviesimage4_TheF&F.jpg"
+            class="card-img-top cardimgstyle"
+            alt="..."
+          />
+          <div class="card-body text-center cardbodystyle">
+            <h5 class="card-title cardtitlestyle">4. The Fast & Furious</h5>
+            <p class="card-text cardtextstyle">
+              Los Angeles police officer Brian O'Conner must decide where his
+              loyalty really lies when he becomes enamored with the street
+              racing world he has been sent undercover to destroy.
+            </p>
+            <a
+              href="https://www.youtube.com/watch?v=ZsJz2TJAPjw"
+              class="btn btn-primary cardbtnstyle FFBtn"
+              >Watch Trailer</a
+            >
+          </div>
         </div>
-        <div class="col">
-
-            <div class="card cardstyle" style="width: 18rem;">
-                <img src="/assets/moviesimage5_F&FTokyoDrift.jpeg" class="card-img-top cardimgstyle" alt="...">
-                <div class="card-body text-center cardbodystyle">
-                    <h5 class="card-title cardtitlestyle">5. F&F Tokyo Drift</h5>
-                    <p class="card-text cardtextstyle"> A teenager becomes a major competitor in the world of drift racing after moving in with his father in Tokyo to avoid a jail sentence in America. </p>
-                    <a href="https://www.youtube.com/watch?v=p8HQ2JLlc4E" class="btn btn-primary cardbtnstyle">Watch Trailer</a>
-                </div>
-            </div>
+      </div>
+      <div class="col">
+        <div class="card cardstyle" style="width: 18rem">
+          <img
+            src="/assets/moviesimage5_F&FTokyoDrift.jpeg"
+            class="card-img-top cardimgstyle"
+            alt="..."
+          />
+          <div class="card-body text-center cardbodystyle">
+            <h5 class="card-title cardtitlestyle">5. F&F Tokyo Drift</h5>
+            <p class="card-text cardtextstyle">
+              A teenager becomes a major competitor in the world of drift racing
+              after moving in with his father in Tokyo to avoid a jail sentence
+              in America.
+            </p>
+            <a
+              href="https://www.youtube.com/watch?v=p8HQ2JLlc4E"
+              class="btn btn-primary cardbtnstyle TDBtn"
+              >Watch Trailer</a
+            >
+          </div>
         </div>
+      </div>
     </div>
-
-    <div class="row">
-        <div class="col">
-            <div class="card cardstyle" style="width: 18rem;">
-                <img src="/assets/moviesimage6_TheGuardian.jpg" class="card-img-top cardimgstyle" alt="...">
-                <div class="card-body text-center cardbodystyle">
-                    <h5 class="card-title cardtitlestyle">6. The Guardian</h5>
-                    <p class="card-text cardtextstyle">A high school swim champion with a troubled past enrolls in the U.S. Coast Guard's "A" School, where legendary rescue swimmer Ben Randall teaches him some hard lessons about loss, love, and self-sacrifice.</p>
-                    <a href=" https://www.youtube.com/watch?v=fvVrlOS8vC4" class="btn btn-primary cardbtnstyle">Watch
-                    Trailer</a>
-                </div>
-            </div>
+    <br />
+    <br />
+    <br />
+    <div class="row secondRow">
+      <div class="col">
+        <div class="card cardstyle" style="width: 18rem">
+          <img
+            src="/assets/moviesimage6_TheGuardian.jpg"
+            class="card-img-top cardimgstyle"
+            alt="..."
+          />
+          <div class="card-body text-center cardbodystyle">
+            <h5 class="card-title cardtitlestyle">6. The Guardian</h5>
+            <p class="card-text cardtextstyle">
+              A high school swim champion with a troubled past enrolls in the
+              U.S. Coast Guard's "A" School, where legendary rescue swimmer Ben
+              Randall teaches him some hard lessons about loss, love, and
+              self-sacrifice.
+            </p>
+            <a
+              href=" https://www.youtube.com/watch?v=fvVrlOS8vC4"
+              class="btn btn-primary cardbtnstyle GBtn"
+              >Watch Trailer</a
+            >
+          </div>
         </div>
-        <div class="col">
-            <div class="card cardstyle" style="width: 18rem;">
-                <img src="/assets/moviesimage7_TheDayAfterTomorrow.jpg" class="card-img-top cardimgstyle" alt="...">
-                <div class="card-body text-center cardbodystyle">
-                    <h5 class="card-title cardtitlestyle">7. The Day After Tomorrow</h5>
-                    <p class="card-text cardtextstyle">Jack Hall, paleoclimatologist, must make a daring trek from Washington, D.C. to New York City to reach his son, trapped in the cross-hairs of a sudden international storm which plunges the planet into a new Ice Age. </p>
-                    <a href=" https://www.youtube.com/watch?v=Ku_IseK3xTc" class="btn btn-primary cardbtnstyle">Watch
-                    Trailer</a>
-                </div>
-            </div>
+      </div>
+      <div class="col">
+        <div class="card cardstyle" style="width: 18rem">
+          <img
+            src="/assets/moviesimage7_TheDayAfterTomorrow.jpg"
+            class="card-img-top cardimgstyle"
+            alt="..."
+          />
+          <div class="card-body text-center cardbodystyle">
+            <h5 class="card-title cardtitlestyle">7. The Day After Tomorrow</h5>
+            <p class="card-text cardtextstyle">
+              Jack Hall, paleoclimatologist, must make a daring trek from
+              Washington, D.C. to New York City to reach his son, trapped in the
+              cross-hairs of a sudden international storm which plunges the
+              planet into a new Ice Age.
+            </p>
+            <a
+              href=" https://www.youtube.com/watch?v=Ku_IseK3xTc"
+              class="btn btn-primary cardbtnstyle"
+              >Watch Trailer</a
+            >
+          </div>
         </div>
-        <div class="col">
-            <div class="card cardstyle" style="width: 18rem;">
-                <img src="/assets/moviesimage8_Shooter.jpg" class="card-img-top cardimgstyle" alt="...">
-                <div class="card-body text-center cardbodystyle">
-                    <h5 class="card-title cardtitlestyle">8. Shooter</h5>
-                    <p class="card-text cardtextstyle">A marksman living in exile is coaxed back into action after hearing of a plot to kill the President. After being-double crossed for the attempt and on the run, he sets out for the real killer and the truth. </p>
-                    <a href="https://www.youtube.com/watch?v=A3lPVwYOdzA
-                    " class="btn btn-primary cardbtnstyle">Watch
-                    Trailer</a>
-                </div>
-            </div>
+      </div>
+      <div class="col">
+        <div class="card cardstyle" style="width: 18rem">
+          <img
+            src="/assets/moviesimage8_Shooter.jpg"
+            class="card-img-top cardimgstyle"
+            alt="..."
+          />
+          <div class="card-body text-center cardbodystyle">
+            <h5 class="card-title cardtitlestyle">8. Shooter</h5>
+            <p class="card-text cardtextstyle">
+              A marksman living in exile is coaxed back into action after
+              hearing of a plot to kill the President. After being-double
+              crossed for the attempt and on the run, he sets out for the real
+              killer and the truth.
+            </p>
+            <a
+              href="https://www.youtube.com/watch?v=A3lPVwYOdzA
+                    "
+              class="btn btn-primary cardbtnstyle SBtn"
+              >Watch Trailer</a
+            >
+          </div>
         </div>
-        <div class="col">
-            <div class="card cardstyle" style="width: 18rem;">
-                <img src="/assets/moviesimage9_TheTransporter.jpg" class="card-img-top cardimgstyle" alt="...">
-                <div class="card-body text-center cardbodystyle">
-                    <h5 class="card-title cardtitlestyle">9. The Transporter</h5>
-                    <p class="card-text cardtextstyle">Frank Martin, who "transports" packages for unknown clients, is asked to move a package that soon begins moving, and complications arise. </p>
-                    <a href="https://www.youtube.com/watch?v=7FnbLyv2oio" class="btn btn-primary cardbtnstyle">Watch
-                    Trailer</a>
-                </div>
-            </div>
+      </div>
+      <div class="col">
+        <div class="card cardstyle" style="width: 18rem">
+          <img
+            src="/assets/moviesimage9_TheTransporter.jpg"
+            class="card-img-top cardimgstyle"
+            alt="..."
+          />
+          <div class="card-body text-center cardbodystyle">
+            <h5 class="card-title cardtitlestyle">9. The Transporter</h5>
+            <p class="card-text cardtextstyle">
+              Frank Martin, who "transports" packages for unknown clients, is
+              asked to move a package that soon begins moving, and complications
+              arise.
+            </p>
+            <a
+              href="https://www.youtube.com/watch?v=7FnbLyv2oio"
+              class="btn btn-primary cardbtnstyle TRBtn"
+              >Watch Trailer</a
+            >
+          </div>
         </div>
-        <div class="col">
-            <div class="card cardstyle" style="width: 18rem;">
-                <img src="/assets/moviesimage10_Transformers.jpg" class="card-img-top cardimgstyle" alt="...">
-                <div class="card-body text-center cardbodystyle">
-                    <h5 class="card-title cardtitlestyle">10. Transformers</h5>
-                    <p class="card-text cardtextstyle">An ancient struggle between two Cybertronian races, the heroic Autobots and the evil Decepticons, comes to Earth, with a clue to the ultimate power held by a teenager. </p>
-                    <a href="https://www.youtube.com/watch?v=BrnXrtm334k" class="btn btn-primary cardbtnstyle">Watch
-                    Trailer</a>
-                </div>
-            </div>
+      </div>
+      <div class="col">
+        <div class="card cardstyle" style="width: 18rem">
+          <img
+            src="/assets/moviesimage10_Transformers.jpg"
+            class="card-img-top cardimgstyle"
+            alt="..."
+          />
+          <div class="card-body text-center cardbodystyle">
+            <h5 class="card-title cardtitlestyle">10. Transformers</h5>
+            <p class="card-text cardtextstyle">
+              An ancient struggle between two Cybertronian races, the heroic
+              Autobots and the evil Decepticons, comes to Earth, with a clue to
+              the ultimate power held by a teenager.
+            </p>
+            <a
+              href="https://www.youtube.com/watch?v=BrnXrtm334k"
+              class="btn btn-primary cardbtnstyle TBtn"
+              >Watch Trailer</a
+            >
+          </div>
         </div>
+      </div>
     </div>
+    <br />
+    <br />
+    <a href="../index.html" class="btn btn-primary mainmenu">Main Menu</a>
+    <br />
+    <br />
 
-
-
-
-
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-        crossorigin="anonymous"></script>
-</body>
-
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
