--- a/index.html
+++ b/index.html
@@ -1,3 +1,8 @@
+<!-- Waqas Dad & AK Dutt -->
+<!-- Date revised: 10/28/2023 -->
+<!-- Exersise name: Top 10 Websites -->
+<!-- Description: Create a multi-page website that talks about your favorite top ten style. -->
+
 <!doctype html>
 <html lang="en">
 
@@ -12,17 +17,13 @@
 
 <body>
     <h1>Top 10 Movies & TV Shows</h1>
-    <br>
-    <br>
-    <br>
-    <div class="Titlebtn">
-    <a href="/pages/page2.html" class="btn btn-primary Wbtn ">Top 10 Movies by Waqas</a>
-    <br>
-    <br>
-    <br>
 
-    <a href="/pages/page3.html" class="btn btn-primary Akbtn ">Top 10 Shows by AK</a>
-    </div>
+    <div class="d-grid gap-2 col-6 mx-auto">
+        <a href="/pages/page2.html "class="firstpgmoviebtntxt"><button class="btn btn-primary waqasbtn" type="button">Movies by Waqas</button></a>
+        <a href="/pages/page3.html" class="firstpgshowbtntxt"><button class="btn btn-primary akbtn" type="button">TV Shows by Ak</button></a>
+      </div>
+
+
 
 
 
