--- a/pages/page3.html
+++ b/pages/page3.html
@@ -19,7 +19,7 @@
       
     <div class="row firstRow">
       <div class="col">
-        <div class="card" style="width: 18rem; height: 18rem">
+        <div class="card cardstyle" style="width: 18rem; height: 18rem;">
           <img
             src="../assets/breaking bad.jpeg"
             class="card-img-top"
@@ -41,7 +41,7 @@
         </div>
       </div>
       <div class="col">
-        <div class="card" style="width: 18rem; height: 18rem">
+        <div class="card cardstyle" style="width: 18rem; height: 18rem;">
           <img
             src="../assets/sopranos.jpeg"
             class="card-img-top"
@@ -63,8 +63,8 @@
           </div>
         </div>
       </div>
-      <div class="col cardHeight">
-        <div class="card" style="width: 18rem">
+      <div class="col">
+        <div class="card cardstyle" style="width: 18rem;">
           <img
             src="../assets/Game_of_Thrones_title_card.jpg"
             class="card-img-top"
@@ -87,7 +87,7 @@
         </div>
       </div>
       <div class="col">
-        <div class="card" style="width: 18rem">
+        <div class="card cardstyle" style="width: 18rem;">
           <img
             src="../assets/rick&morty.jpeg"
             class="card-img-top"
@@ -108,7 +108,7 @@
         </div>
       </div>
       <div class="col">
-        <div class="card" style="width: 18rem">
+        <div class="card cardstyle" style="width: 18rem;">
           <img
             src="../assets/sherlock.jpeg"
             class="card-img-top"
@@ -136,7 +136,7 @@
 </div>
 <div class="row secondRow">
   <div class="col">
-    <div class="card" style="width: 18rem; height: 18rem">
+    <div class="card cardstyle" style="width: 18rem; height: 18rem;">
       <img
         src="../assets/office.jpeg"
         class="card-img-top"
@@ -156,7 +156,7 @@
     </div>
   </div>
   <div class="col">
-    <div class="card" style="width: 18rem; height: 18rem">
+    <div class="card cardstyle" style="width: 18rem; height: 18rem;">
       <img
         src="../assets/gravity.jpeg"
         class="card-img-top"
@@ -175,8 +175,8 @@
       </div>
     </div>
   </div>
-  <div class="col cardHeight">
-    <div class="card" style="width: 18rem">
+  <div class="col">
+    <div class="card cardstyle" style="width: 18rem;">
       <img
         src="../assets/friends.jpeg"
         class="card-img-top"
@@ -197,7 +197,7 @@
     </div>
   </div>
   <div class="col">
-    <div class="card" style="width: 18rem">
+    <div class="card cardstyle" style="width: 18rem;">
       <img
         src="../assets/narcos.jpeg"
         class="card-img-top"
@@ -217,7 +217,7 @@
     </div>
   </div>
   <div class="col">
-    <div class="card" style="width: 18rem">
+    <div class="card cardstyle" style="width: 18rem;">
       <img
         src="../assets/the last.jpeg"
         class="card-img-top"
@@ -231,7 +231,7 @@
         <a
           href="https://youtu.be/uLtkt8BonwM?si=p39FHltrJMPMPFdp"
           class="btn btn-primary cardbtnstyle LBtn"
-          >Watch Trailer</a
+          >Watch Trailer</a 
         >
       </div>
     </div>
@@ -239,8 +239,8 @@
 </div>
 <br>
 <br>
-<a href="../index.html" class="btn btn-primary mainmenu">Main Menu</a>
 
+<a href="../index.html" class="btn btn-primary pg3mainmenu"> Main Menu</a>
 <br>
 <br>
 
